@@ -12,3 +12,4 @@ require_relative "extract/extract_worksheet_names"
 require_relative "extract/extract_named_references"
 require_relative "extract/extract_worksheet_table_relationships"
 require_relative "extract/extract_table"
+require_relative "extract/extract_everything"
